# advent

./: Cargo.toml
src/: get.rs  main.rs  solution.rs  solve.rs
src/util/: bitmap.rs  char.rs  grid.rs  mod.rs  output.rs  slice.rs  style.rs  vecset.rs  vector.rs  write.rs
src/y2025/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  mod.rs
