[package]
name = "advent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = { version = "2.10.0", features = ["std"] }
clap = { version = "4.5.52", features = ["derive", "env"] }
dotenvy = "0.15.7"
foldhash = "0.2.0"
itertools = "0.14.0"
nalgebra = "0.34.1"
ndarray = "0.17.1"
nom = "8.0.0"
num = { version = "0.4.3", features = ["std", "num-bigint"] }
rand = "0.9.2"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = { version = "3.1.4", features = ["cookies"] }
wyrand = { version = "0.3.2", features = ["rand_core"] }
z3 = "0.19.5"

[dev-dependencies]
rstest = "0.26.1"
